--- a/catalog.html
+++ b/catalog.html
@@ -202,19 +202,19 @@
 
   <ul class="flex-js-c gap-1 mb-7 mt-[80px] sm:mt-0">
     <li>
-      <a href="home.html" class="text-[15px] text-[#6E6E6E]">Главная</a>
+      <a href="home.html" class="text-[16px] text-[#6E6E6E] hover:text-[#009FFF]">Главная</a>
     </li>
     <li class="text-[15px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[15px] text-[#6E6E6E]">Каталог</a>
+      <a href="catalog.html" class="text-[16px] text-[#6E6E6E] hover:text-[#009FFF]">Каталог</a>
     </li>
     <li class="text-[15px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[15px] text-[#6E6E6E]">Катушки</a>
+      <a href="catalog.html" class="text-[16px] text-[#6E6E6E] hover:text-[#009FFF]">Катушки</a>
     </li>
   </ul>
 
@@ -323,14 +323,14 @@
 
         <div class="border-b hidden lg:block mt-2">
           <div class="w-full flex-jsb-c gap-2">
-            <div class="fle-js-c gap-2 text-[#6E6E6E]">
+            <div class="fle-js-c gap-2 text-[#6E6E6E] w-[48%]">
               от
-              <input type="text" class="w-[110px] h-[49px] border border-[#C7C7C7] pl-3 rounded-[8px] text-[#212121]"
+              <input type="text" class="w-[100%] h-[49px] border border-[#C7C7C7] pl-3 rounded-[8px] text-[#212121]"
                      value="70" id="priceMin">
             </div>
-            <div class="fle-js-c gap-2 text-[#6E6E6E]">
+            <div class="fle-js-c gap-2 text-[#6E6E6E] w-[48%]">
               до
-              <input type="text" class="w-[110px] h-[49px] border border-[#C7C7C7] pl-3 rounded-[8px] text-[#212121]"
+              <input type="text" class="w-[100%] h-[49px] border border-[#C7C7C7] pl-3 rounded-[8px] text-[#212121]"
                      value="140" id="priceMax">
             </div>
           </div>
@@ -862,7 +862,7 @@
                     <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                     29 отзывов
                   </div>
-                  <span class="text-[#6E6E6E]">арт. 234 345</span>
+                  <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
                 </div>
 
                 <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
@@ -870,7 +870,7 @@
                   245 см тест 15-50 гр</h3>
 
 
-                <div class="flex-js-c gap-2 text-[#707070]">
+                <div class="flex-js-c gap-2 text-[#707070] hidden">
                   Производитель
                   <span class="text-[#323232] font-bold">Daiwa</span>
                 </div>
@@ -878,7 +878,7 @@
 
                 <div class="flex-js-c gap-1 mt-2">
                   <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                  <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                  <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
                 </div>
 
 
@@ -1114,11 +1114,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -1163,9 +1161,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -1237,11 +1234,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
