--- a/check-offer.html
+++ b/check-offer.html
@@ -224,7 +224,9 @@
           </p>
         </div>
 
-        <h3 class="text-[24px] mt-8 font-medium">Кто заберет заказ</h3>
+        <h3 class="text-[26px] mt-8 font-semibold">Ваш город доставки</h3>
+        <p class="text-[#323232] text-[18px]">Доставить в <a href="#" class="text-[#009fff] text-[18px] underline">Санкт-Петербург</a> </p>
+        <h3 class="text-[26px] mt-8 font-semibold">Кто заберет заказ</h3>
 
         <p class="mt-4">* — обязательно</p>
 
@@ -255,7 +257,7 @@
 
 
           <div class="w-full mt-[60px] max-[767px]:mt-[30px]">
-            <h4 class="text-[24px] font-medium mb-6">Как доставить заказ</h4>
+            <h4 class="text-[24px] mb-6 font-semibold">Как доставить заказ</h4>
             
             <div class="w-full grid grid-cols-3 gap-4 sm:gap-6 max-[767px]:grid-cols-1">
               <label class="w-full relative">
@@ -318,8 +320,8 @@
               <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите улицу">
             </label>
             <label class="w-full">
-              <span class="block text-[#323232] mb-1">Номер квартиры*</span>
-              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите номер">
+              <span class="block text-[#323232] ">Номер квартиры*</span>
+              <input type="text" class="w-full mb-1 max-w-[252px] max-[767px]:max-w-[100%] pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите номер">
             </label>
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Этаж</span>
@@ -390,7 +392,7 @@
 
       <div class="col-span-5">
         <div class="w-full bg-[#F4F4F4] rounded-[24px] p-10 sticky top-4 max-[767px]:p-[20px]">
-          <h3 class="text-[#212121] text-[24px] font-semibold mb-6">Итоговый заказ</h3>
+          <h3 class="text-[#212121] text-[24px] font-semibold mb-6 font-semibold">Итоговый заказ</h3>
 
 
           <div class="w-full pb-4 border-b max-[767px]:border-none">
@@ -635,11 +637,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -684,9 +684,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -758,11 +757,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
