--- a/comparisons.html
+++ b/comparisons.html
@@ -221,10 +221,14 @@
 
   <div class="w-full mt-6">
     <h1 class="text-[32px] font-medium mb-5 tracking-[-0.64px]">Сравнения</h1>
-    <div class="flex-js-c gap-4">
-      <span class="text-[#6E6E6E]">Показывать</span>
+    <div class="flex-js-c gap-4 max-[767px]:flex-wrap">
+      <span class="text-[#6E6E6E] max-[767px]:w-full">Показывать</span>
       <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Все характеристики</button>
       <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Только различия</button>
+      <a href="#" class="text-[#6E6E6E] underline flex-js-e max-[767px]:w-full">
+        <img src="img/icons/delete-remove.svg" alt="delete-remove">
+        Очистить
+      </a>
     </div>
 
     <div class="w-full overflow-x-auto pb-10 com-body-scroll-bottom-min hidden sm:block">
@@ -232,10 +236,7 @@
         <tbody>
         <tr class="border-b">
           <td class="pb-4 min-w-[250px] w-[300px]">
-            <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">
-              <img src="img/icons/delete-remove.svg" alt="delete-remove">
-              Очистить
-            </a>
+ 
           </td>
           <td class="pb-4 min-w-[250px] w-[300px]">
             <div class="px-[30px] relative">
@@ -374,18 +375,18 @@
 
     <div class="w-full block sm:hidden mt-10">
 
-      <div class="w-full pb-4 border-b mb-4">
+      <!-- <div class="w-full pb-4 border-b mb-4">
         <a href="#" class="text-[#6E6E6E] underline flex-js-e gap-2">
           <img src="img/icons/delete-remove.svg" alt="delete-remove">
           Очистить
         </a>
-      </div>
+      </div> -->
 
 
       <div data-for="4" class="w-full mb-10">
           <div class="relative flex-js-c gap-4 pb-4 border-b mb-4">
             <img src="img/products/product2.png" alt="product" class="w-[74px]">
-            <h4 class="text-[16px] md:text-[18px] pe-4">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+            <h4 class="text-[16px] md:text-[18px] pe-4 ">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
             <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
           </div>
 
@@ -608,11 +609,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -657,9 +656,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -731,11 +729,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
