--- a/gift-certificate.html
+++ b/gift-certificate.html
@@ -469,11 +469,9 @@ rounded-[24px] mb-[60px] mt-[80px] sm:mt-[20px] p-[90px] max-[1300px]:p-[40px] m
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -518,9 +516,8 @@ rounded-[24px] mb-[60px] mt-[80px] sm:mt-[20px] p-[90px] max-[1300px]:p-[40px] m
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -592,11 +589,9 @@ rounded-[24px] mb-[60px] mt-[80px] sm:mt-[20px] p-[90px] max-[1300px]:p-[40px] m
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
