--- a/basket.html
+++ b/basket.html
@@ -263,11 +263,12 @@
 
 
             <div class="col-span-6 md:col-span-4 max-[768px]:pl-9">
-              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
               <div class="flex-js-c gap-2">
                 <h4 class="text-[#CF301B] line-through">300 ₽</h4>
                 <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
               </div>
+              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
+
             </div>
 
             <div class="col-span-6 md:col-span-2 flex-je-s">
@@ -311,11 +312,12 @@
 
 
             <div class="col-span-6 md:col-span-4 max-[768px]:pl-9">
-              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
               <div class="flex-js-c gap-2">
                 <h4 class="text-[#CF301B] line-through">300 ₽</h4>
                 <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
               </div>
+              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
+
             </div>
 
             <div class="col-span-6 md:col-span-2 flex-je-s">
@@ -406,8 +408,8 @@
           </div>
           <p class="text-[#6E6E6E]">Без учета возможной стоимости доставки</p>
 
-          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white font-bold flex-jc-c gap-2 mt-6">
-            К оформлению, 1 товар • 1 000 ₽ и 800 бонусов
+          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white font-bold flex-jc-c gap-2 mt-6">
+            К оформлению, 1 товар
           </button>
         </div>
       </div>
@@ -583,11 +585,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -632,9 +632,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -706,11 +705,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
