--- a/favorite.html
+++ b/favorite.html
@@ -231,11 +231,11 @@
     max-[767px]:mb-[12px]">Показывать</span>
     <div class="flex">
       <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
-        border-[rgba(110,110,110,0.25)]">Акции</a>
+        border-[rgba(110,110,110,0.25)] hover:border-[rgba(110,110,110,0.75)]">Акции</a>
       <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
-         border-[rgba(110,110,110,0.25)]">Новинки</a>
+         border-[rgba(110,110,110,0.25)] hover:border-[rgba(110,110,110,0.75)]">Новинки</a>
       <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E]
-        border border-[rgba(110,110,110,0.25)]">Хиты</a>
+        border border-[rgba(110,110,110,0.25)] hover:border-[rgba(110,110,110,0.75)]">Хиты</a>
     </div>
   </div>
 
@@ -277,14 +277,14 @@
             <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
             29 отзывов
           </div>
-          <span class="text-[#6E6E6E]">арт. 234 345</span>
+          <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
         </div>
 
         <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF
           245 см тест 15-50 гр</h3>
 
 
-        <div class="flex-js-c gap-2 text-[#707070]">
+        <div class="flex-js-c gap-2 text-[#707070] hidden">
           Производитель
           <span class="text-[#323232] font-bold">Daiwa</span>
         </div>
@@ -292,7 +292,7 @@
 
         <div class="flex-js-c gap-1 mt-2">
           <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
         </div>
 
 
@@ -344,14 +344,14 @@
             <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
             29 отзывов
           </div>
-          <span class="text-[#6E6E6E]">арт. 234 345</span>
+          <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
         </div>
 
         <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF
           245 см тест 15-50 гр</h3>
 
 
-        <div class="flex-js-c gap-2 text-[#707070]">
+        <div class="flex-js-c gap-2 text-[#707070] hidden">
           Производитель
           <span class="text-[#323232] font-bold">Daiwa</span>
         </div>
@@ -359,7 +359,7 @@
 
         <div class="flex-js-c gap-1 mt-2">
           <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
         </div>
 
 
@@ -411,14 +411,14 @@
             <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
             29 отзывов
           </div>
-          <span class="text-[#6E6E6E]">арт. 234 345</span>
+          <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
         </div>
 
         <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF
           245 см тест 15-50 гр</h3>
 
 
-        <div class="flex-js-c gap-2 text-[#707070]">
+        <div class="flex-js-c gap-2 text-[#707070] hidden">
           Производитель
           <span class="text-[#323232] font-bold">Daiwa</span>
         </div>
@@ -426,7 +426,7 @@
 
         <div class="flex-js-c gap-1 mt-2">
           <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
         </div>
 
 
@@ -609,11 +609,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -658,9 +656,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -732,11 +729,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
