--- a/modal-product-card-check2.html
+++ b/modal-product-card-check2.html
@@ -561,7 +561,7 @@
 
             <div class="flex-js-c gap-1 mt-2">
               <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo" class="w-[24px]">
-              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кешбек</span>
+              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
             </div>
           </div>
 
@@ -951,14 +951,14 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
                 Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -966,7 +966,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1024,7 +1024,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1032,7 +1032,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">LureMax</span>
               </div>
@@ -1040,7 +1040,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1094,7 +1094,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1102,7 +1102,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1110,7 +1110,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1164,7 +1164,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1172,7 +1172,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1180,7 +1180,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1240,7 +1240,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1248,7 +1248,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1256,7 +1256,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1310,7 +1310,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1318,7 +1318,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1326,7 +1326,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1471,14 +1471,14 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
                 Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -1486,7 +1486,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1544,7 +1544,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1552,7 +1552,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">LureMax</span>
               </div>
@@ -1560,7 +1560,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1614,7 +1614,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1622,7 +1622,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1630,7 +1630,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1684,7 +1684,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1692,7 +1692,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1700,7 +1700,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1760,7 +1760,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1768,7 +1768,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1776,7 +1776,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1830,7 +1830,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1838,7 +1838,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1846,7 +1846,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -2038,11 +2038,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -2087,9 +2085,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -2161,11 +2158,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
