--- a/modal-send-reqest.html
+++ b/modal-send-reqest.html
@@ -313,7 +313,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
@@ -321,7 +321,7 @@
                 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -329,7 +329,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -555,7 +555,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
@@ -563,7 +563,7 @@
                 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -571,7 +571,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -695,14 +695,14 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
                 Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -710,7 +710,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -768,7 +768,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -776,7 +776,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">LureMax</span>
               </div>
@@ -784,7 +784,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -838,7 +838,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -846,7 +846,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -854,7 +854,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -908,7 +908,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -916,7 +916,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -924,7 +924,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -984,7 +984,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -992,7 +992,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1000,7 +1000,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1054,7 +1054,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1062,7 +1062,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1070,7 +1070,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1161,14 +1161,14 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
                 Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -1176,7 +1176,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1234,7 +1234,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1242,7 +1242,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">LureMax</span>
               </div>
@@ -1250,7 +1250,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1304,7 +1304,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1312,7 +1312,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1320,7 +1320,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1374,7 +1374,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1382,7 +1382,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1390,7 +1390,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1450,7 +1450,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1458,7 +1458,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1466,7 +1466,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1520,7 +1520,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1528,7 +1528,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1536,7 +1536,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1991,11 +1991,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -2040,9 +2038,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -2114,11 +2111,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
