--- a/product-card.html
+++ b/product-card.html
@@ -218,15 +218,15 @@
 
 
   <div class="w-full grid grid-cols-1 md:grid-cols-2 gap-6 2xl:gap-10 mt-6">
-    <div class="w-full flex-js-s xl:flex-jsb-c gap-4 xl:mt-[-90px] flex-col xl:flex-row">
+    <div class="w-full flex-js-s xl:flex-jsb-c gap-4 xl:mt-[-150px] flex-col xl:flex-row">
       <div class="w-[183px] min-w-[183px] hidden xl:block">
 
-        <div class="flex-jc-c mb-2">
-          <div id="product-items-prev" class="w-[42px] h-[42px] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black">
+        <div class="flex-jc-c mb-[-25px]">
+          <div id="product-items-prev" class="w-[42px] h-[42px] bg-[white] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black">
             <img src="img/icons/arrow-top.svg" alt="arrow-top">
           </div>
         </div>
-        <div class="swiper product-item-slider h-[762px]">
+        <div class="swiper product-item-slider h-[820px]">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="w-full h-full border flex-jc-c overflow-hidden rounded-[12px] p-4 opacity-80 hover:opacity-100 cursor-pointer">
@@ -267,8 +267,8 @@
           </div>
 
         </div>
-        <div class="flex-jc-c mt-2">
-          <div id="product-items-next" class="w-[42px] h-[42px] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black transform rotate-180">
+        <div class="flex-jc-c mt-[-25px]">
+          <div id="product-items-next" class="w-[42px] h-[42px] bg-[white] flex-jc-c border rounded-[8px] transition cursor-pointer hover:border-black transform rotate-180">
             <img src="img/icons/arrow-top.svg" alt="arrow-top">
           </div>
         </div>
@@ -304,7 +304,7 @@
 
       </div>
 
-      <div class="w-full h-[460px] xl:h-[869px] border flex-jc-c rounded-[12px] p-6">
+      <div class="w-full h-[460px] xl:h-[820px] border flex-jc-c rounded-[12px] p-6">
         <img src="img/products/product1.png" alt="" class="w-full" id="fullImagePath">
       </div>
 
@@ -391,12 +391,14 @@
         </div>
 
         <div class="flex-js-c gap-4 mt-8">
-          <img src="img/partners/partner-7.png" alt="partner logo" class="w-[58px]">
+          <img src="img/partners/partner-7.png" alt="partner logo" class="w-[100px]">
           <div>
             <h4 class="text-[14px] font-bold mb-[-2px]">Jaxon</h4>
             <p class="text-[14px] text-[#707070]">Бренд</p>
           </div>
         </div>
+
+        <h3 class="text-[18px] font-semibold text-[#323232] my-[6px]">Характеристики</h3>
 
         <ul class="mt-3">
           <li>
@@ -431,9 +433,9 @@
         <h1 class="text-[32px] font-medium mb-1 tracking-[-0.64px] leading-[32px]">Воблер для рыбалки глубоководный Jaxon Diver DR 12 см 28 гр #U</h1>
 
         <div class="flex-js-c">
-          <span class="text-[13px] text-[#707070] mr-5">Артикул 154 245 245</span>
+          <span class="text-[16px] text-[#707070] mr-5">Артикул: 23251</span>
           <div class="flex-js-c gap-4">
-            <span class="text-[13px] text-[#707070]">Рейтинг</span>
+            <span class="text-[16px] text-[#707070]">Рейтинг</span>
             
             <div class="flex-js-c gap-1">
               <img src="img/icons/star-yellow.svg" alt="">
@@ -482,12 +484,14 @@
         </div>
 
         <div class="flex-js-c gap-4 mt-8">
-          <img src="img/partners/partner-7.png" alt="partner logo" class="w-[58px]">
+          <img src="img/partners/partner-7.png" alt="partner logo" class="w-[100px]">
           <div>
             <h4 class="text-[14px] font-bold mb-[-2px]">Jaxon</h4>
             <p class="text-[14px] text-[#707070]">Бренд</p>
           </div>
         </div>
+
+        <h3 class="text-[18px] font-semibold text-[#323232] my-[4px]">Характеристики</h3>
 
         <ul class="mt-3">
           <li>
@@ -561,7 +565,7 @@
 
             <div class="flex-js-c gap-1 mt-2">
               <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo" class="w-[24px]">
-              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кешбек</span>
+              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
             </div>
           </div>
 
@@ -600,7 +604,7 @@
         </div>
 
         <div class="w-full bg-[#F4F4F4] rounded-[12px] overflow-hidden relative mb-2 p-6">
-          <h3 class="text-[18px] font-semibold mb-1">Наличие в магазине</h3>
+          <h3 class="text-[18px] font-semibold mb-1">Информация о доставке Спб</h3>
           <ul>
             <li class="flex-jsb-c">
               <div class="flex-js-c gap-1">
@@ -617,7 +621,7 @@
             <li class="flex-jsb-c">
               <div class="flex-js-c gap-1">
                 <img src="img/icons/car-blue.svg" alt="">
-                Доставка курьером: 1-2 дня, 300₽, бесплатно от 5 000₽
+                Доставка курьером: 1-2 дня, 300₽ бесплатно от 5 000₽
               </div>
             </li>
             <li class="flex-jsb-c">
@@ -981,14 +985,14 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
                 Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -996,7 +1000,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1054,7 +1058,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1062,7 +1066,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">LureMax</span>
               </div>
@@ -1070,7 +1074,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1124,7 +1128,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1132,7 +1136,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1140,7 +1144,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1194,7 +1198,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1202,7 +1206,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1210,7 +1214,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1270,7 +1274,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1278,7 +1282,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1286,7 +1290,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1340,7 +1344,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1348,7 +1352,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1356,7 +1360,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1501,14 +1505,14 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa
                 Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -1516,7 +1520,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1574,7 +1578,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1582,7 +1586,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">LureMax</span>
               </div>
@@ -1590,7 +1594,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1644,7 +1648,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1652,7 +1656,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1660,7 +1664,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1714,7 +1718,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1722,7 +1726,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1730,7 +1734,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1790,7 +1794,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1798,7 +1802,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1806,7 +1810,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -1860,7 +1864,7 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">
@@ -1868,7 +1872,7 @@
               </h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Fisher</span>
               </div>
@@ -1876,7 +1880,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -2068,11 +2072,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -2117,9 +2119,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -2191,11 +2192,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
