--- a/profile-featured.html
+++ b/profile-featured.html
@@ -403,13 +403,13 @@
                   <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
                   29 отзывов
                 </div>
-                <span class="text-[#6E6E6E]">арт. 234 345</span>
+                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
               </div>
 
               <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
 
 
-              <div class="flex-js-c gap-2 text-[#707070]">
+              <div class="flex-js-c gap-2 text-[#707070] hidden">
                 Производитель
                 <span class="text-[#323232] font-bold">Daiwa</span>
               </div>
@@ -417,7 +417,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
               </div>
 
 
@@ -609,11 +609,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -658,9 +656,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -732,11 +729,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
