--- a/profile-user-info.html
+++ b/profile-user-info.html
@@ -601,11 +601,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
         </div>
-
 
         <ul>
           <li>
@@ -650,9 +648,8 @@
           fishemania777@yandex.ru
         </a>
 
-        <p class="text-[14px] text-white opacity-80">
-          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-        </p>
+        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -724,11 +721,9 @@
             fishemania777@yandex.ru
           </a>
 
-          <p class="text-[14px] text-white opacity-80">
-            пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
-          </p>
-        </div>
-      </div>
+          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
+  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+        </div>      </div>
 
     </div>
 
